fix redis cache: change toList() to collector(Collectors.toList())